<resources>
    <string name="app_name">KeepFit</string>
    <string name="empty_goal_of_day">Tap the button in the bottom to add a new goalDates!</string>
    <string name="goal_of_day_steps">Steps - </string>
    <string name="forward_slash">/</string>
    <string name="no_goals_add_one">No current goalDates! Add one here</string>
    <string name="no_goals_choose_one">Or choose one from the list</string>
    <string name="placeholder">Stuff Here!</string>

    <string name="add_steps">Add Steps</string>
    <string name="goal_date">Date: </string>
    <string name="update_steps">Update</string>

    <!-- Add New Goal -->
    <string name="new_goal">New Goal</string>
    <string name="goal_name">Goal Name</string>
    <string name="goal_steps">Step Goal</string>
    <string name="add_goal">Add Goal</string>

    <!-- Goals Fragment -->
    <string name="no_goals_for_day">There are no goals for today</string>

    <!-- History Fragment -->
    <string name="history_title">Goal History</string>

    <!-- Statistics Fragment -->
    <string name="average">Average</string>
    <string name="minimum">Minimum</string>
    <string name="maximum">Maximum</string>
    <string name="percentage">Percentage Complete</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="steps_to_meters">How many steps are in a meter?</string>
    <string name="test_mode">Test Mode</string>
    <string name="test_mode_description">This mode allows you to select the current date, so you can add goals for days you may have missed or forgotten.</string>
    <string name="edit_mode">Edit Mode</string>
    <string name="edit_mode_description">This mode allows you to edit your current goal. You can change the name of the goal, the step goal, and the units used for the goal.</string>
    <string name="tab_layout">Tab Layout</string>
    <string name="tab_layout_description">Change the order of the tabs.</string>
    <string name="tab_layout_message">Changing the tab order will cause the app to restart.</string>
    <string name="statistics_view">Statistics View</string>
    <string name="statistics_view_description">Change the statistics that will be displayed.</string>
    <string name="statistics_message">Changing the statistics view will cause the app to restart.</string>
    <string name="statistics_show">Show</string>
    <string name="statistics_open">Open</string>
    <string name="populate">Populate Data</string>
    <string name="populate_description">Select this option to quickly fill up some test data for old dates.</string>
    <string name="reset">Reset</string>
    <string name="reset_settings">Reset Settings</string>
    <string name="reset_settings_message">This will just reset your preferences, such as tab layout and statistics view.</string>
    <string name="reset_data">Reset Data</string>
    <string name="reset_data_message">This will reset only your app\'s history and step counts.</string>
    <string name="reset_all">Reset All</string>
    <string name="reset_all_message">This will reset everything on the app.</string>
    <string name="reset_description">You can reset the app\'s data here.</string>
    <string name="reset_settings_complete_message">Your settings have been reset!</string>
    <string name="reset_data_complete_message">Your data has been reset!</string>
    <string name="reset_all_complete_message">Your data and your settings have been reset!</string>

    <!-- Tab Layout View -->
    <string name="goal_of_day">Goal Of The Day</string>
    <string name="goals">Goals</string>
    <string name="history">History</string>
    <string name="statistics">Statistics</string>

    <!-- Algorithm -->
    <string name="algorithm_dialog_message">Using this feature will allow your device to count your steps for you!</string>
    <string name="algorithm_dialog_warning">WARNING! This may cause slight performance issues until this feature is perfected!</string>
    <string name="algorithm_dialog_disclaimer">You can always turn off the step counting and use the default feature by tapping the running man.</string>
    <string name="algorithm_dialog_sensor_message">Note: Your device does not have a gravity sensor. Without a gravity sensor, the accuracy of the step counter will not be ideal.</string>
    <string name="algorithm_positive_text">OK!</string>
    <string name="algorithm_negative_text">Nevermind...</string>

    <!-- Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_algorithm">Algorithm</string>
    <string name="action_calendar">Calendar</string>
</resources>
