<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/GhostWhite"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/statistics_message"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="16dp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:background="@color/Black" />

    <com.mcnedward.keepfit.view.StatisticsSelectionView
        android:id="@+id/setting_statistics_average"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:statistics_selection_title="@string/average" />

    <com.mcnedward.keepfit.view.StatisticsSelectionView
        android:id="@+id/setting_statistics_minimum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:statistics_selection_title="@string/minimum" />

    <com.mcnedward.keepfit.view.StatisticsSelectionView
        android:id="@+id/setting_statistics_maximum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:statistics_selection_title="@string/maximum" />

    <com.mcnedward.keepfit.view.StatisticsSelectionView
        android:id="@+id/setting_statistics_percentage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:statistics_selection_title="@string/percentage" />
</LinearLayout>