<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/GhostWhite"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/reset_settings_message"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="16dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/reset_settings_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="20dp"
        android:background="@color/FireBrick"
        android:text="@string/reset_settings"
        android:textColor="@color/White" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:background="@color/Black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/reset_data_message"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="16dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/reset_data_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="20dp"
        android:background="@color/FireBrick"
        android:text="@string/reset_data"
        android:textColor="@color/White" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:background="@color/Black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/reset_all_message"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="16dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/reset_all_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="20dp"
        android:background="@color/FireBrick"
        android:text="@string/reset_all"
        android:textColor="@color/White" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:background="@color/Black" />

</LinearLayout>