<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/GhostWhite"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/tab_layout_message"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="16dp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:background="@color/Black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.mcnedward.keepfit.view.TabSelectionView
            android:id="@+id/tab_goal_of_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            custom:tab_selection_title="@string/goal_of_day" />

        <com.mcnedward.keepfit.view.TabSelectionView
            android:id="@+id/tab_goals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            custom:tab_selection_title="@string/goals" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.mcnedward.keepfit.view.TabSelectionView
            android:id="@+id/tab_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            custom:tab_selection_title="@string/history" />

        <com.mcnedward.keepfit.view.TabSelectionView
            android:id="@+id/tab_statistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            custom:tab_selection_title="@string/statistics" />
    </LinearLayout>

    <NumberPicker
        android:id="@+id/tab_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp" />
</LinearLayout>