<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/statistics_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.mcnedward.keepfit.view.StatisticView
            android:id="@+id/statistics_average"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:statistics_title="@string/average" />

        <com.mcnedward.keepfit.view.StatisticView
            android:id="@+id/statistics_minimum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:statistics_title="@string/minimum" />

        <com.mcnedward.keepfit.view.StatisticView
            android:id="@+id/statistics_maximum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:statistics_title="@string/maximum" />

        <com.mcnedward.keepfit.view.StatisticView
            android:id="@+id/statistics_percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:statistics_title="@string/percentage" />
    </LinearLayout>

    <TextView
        android:id="@+id/statistics_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/statistics_container"
        android:padding="16dp"
        android:textAlignment="center"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/fragment_advanced_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <include layout="@layout/fragment_advanced" />
    </LinearLayout>
</RelativeLayout>