<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/statistics_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/statistics_selection_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="8dp"
            android:textStyle="bold"
            android:text="@string/placeholder"
            android:textSize="16dp" />

        <RelativeLayout
            android:id="@+id/statistics_show_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:layout_toLeftOf="@+id/statistics_open_container">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/statistics_show"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/statistics_show"
                    android:textAlignment="center"
                    android:textSize="14dp" />

                <CheckBox
                    android:id="@+id/check_statistics_show"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="15dp"
                    android:paddingRight="10dp"
                    android:paddingTop="15dp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/statistics_open_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:layout_alignParentRight="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/statistics_open"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/statistics_open"
                    android:textAlignment="center"
                    android:textSize="14dp" />

                <CheckBox
                    android:id="@+id/check_statistics_open"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:paddingBottom="15dp"
                    android:paddingRight="10dp"
                    android:paddingTop="15dp" />

            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:background="@color/Black" />
</LinearLayout>
